--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
     <div id="app">
       <h1>{{ product }}</h1>
+      
+      <p>{{ desription }}</p>
     </div>
 
     <!-- Import Js -->
